@@ -153,7 +153,7 @@ com.openexchange.servlet.maxRateLenientModules="rt, system"
 
 # Specify (wildcard notation supported) those User-Agents which are excluded from the rate limit checks
 # Default value: "Open-Xchange .NET HTTP Client*", "Open-Xchange USM HTTP Client*", "Jakarta Commons-HttpClient*"
-com.openexchange.servlet.maxRateLenientClients="Open-Xchange .NET HTTP Client*", "Open-Xchange USM HTTP Client*", "Jakarta Commons-HttpClient*"
+com.openexchange.servlet.maxRateLenientClients="Open-Xchange .NET HTTP Client*", "Open-Xchange USM HTTP Client*", "Jakarta Commons-HttpClient*", "HTTP API Testing Agent"
 
 # Specify how to associate a rate limit with a HTTP request
 # By default a rate limit is associated with that tuple of { remote-address, user-agent }
