@@ -13,5 +13,5 @@
 <stringAttribute key="org.eclipse.jdt.launching.JRE_CONTAINER" value="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 <stringAttribute key="org.eclipse.jdt.launching.MAIN_TYPE" value="com.openexchange.ajax.task.TaskTestSuite"/>
 <stringAttribute key="org.eclipse.jdt.launching.PROJECT_ATTR" value="open-xchange-test"/>
-<stringAttribute key="org.eclipse.jdt.launching.VM_ARGUMENTS" value="-Dtest.propfile=${workspace_loc:/open-xchange-test/conf/mytest.properties}&#10;-Djava.util.logging.config.file=${workspace_loc:/open-xchange-development/tmp/logging.properties}&#10;-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.Jdk14Logger"/>
+<stringAttribute key="org.eclipse.jdt.launching.VM_ARGUMENTS" value="-Dtest.propfile=${workspace_loc:/open-xchange-test/conf/mytest.properties}&#10;-Dlogback.configurationFile=${workspace_loc:/com.openexchange.logback.configuration/logback-test.xml}"/>
 </launchConfiguration>
