@@ -1,3 +1,7 @@
+* 2013-12-30 - marcus.klein@open-xchange.com
+
+ - Fix for bug 30015: Dropping attribute 'date completed' when creating the next occurrence of a task.
+
 * 2013-12-24 - thorben.betten@open-xchange.com
 
  - Fix for bug 30236: Properly check for duplicate folder on folder rename operation
